# db_verifier

./: .env.default  .gitignore  LICENSE  Makefile  README.md  README.ru.md  db_verifier.sql  docker-compose-dev.yml  pyproject.toml
.github/workflows/: test.yaml
db_verifier/: __init__.py  data_structures.py  run.py
dev_env/: postgres.env
examples/: cumulative_score.sql  where.sql
shards/: c1001.sql  fk1001.sql  fk1002.sql  fk1007.sql  fk1010.sql  fk1011.sql  n1025.sql  n1026.sql  n1030.sql  n1032.sql  n1034.sql  n1036.sql  n1038.sql  n1040.sql  r1001.sql  r1002.sql  s1001.sql  s1010.sql  s1011.sql  s1012.sql  sm0001.sql
tests/: c1001.down.sql  c1001.test.sql  c1001.up.sql  conftest.py  db_verifier_result.down.sql  fk1001.down.sql  fk1001.sql  fk1001.test.sql  fk1001.up.sql  fk1002.down.sql  fk1002.sql  fk1002.test.sql  fk1002.up.sql  fk1007.down.sql  fk1007.sql  fk1007.test.sql  fk1007.up.sql  fk1010.down.sql  fk1010.sql  fk1010.test.sql  fk1010.up.sql  fk1011.down.sql  fk1011.test.sql  fk1011.up.sql  i1001.sql  i1003.sql  i1010.sql  n1001.sql  n1002.down.sql  n1002.up.sql  n1005.sql  n1006.down.sql  n1006.up.sql  n1010.sql  n1011.down.sql  n1011.up.sql  n1016.down.sql  n1016.up.sql  n1021.down.sql  n1021.up.sql  (+54 more)
tests/sql/: c1001.sql  fk1001.sql  fk1002.sql
